# CardExperiments

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Poker/: cards_lib.py  poker_client.py  testing_site.py
libs/include/: cards.hpp
libs/include/cards/: cards.hpp
libs/src/: cards.cpp
src/: CMakeLists.txt
src/libs/cards/: cards.hpp
src/tests/: card_test.cpp
stash/apps/: testing_site.py
stash/libs/: LICENSE
stash/libs/poker/: poker.py
stash/libs/tmp_py/: cards.py  poker.py
tests/: card_test.cpp
